--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script type="text/javascript" src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
-  <script src="bundle.js"></script>
 
   <title></title>
 </head>
@@ -13,13 +12,18 @@
 <body>
     <div class="jumbotron">
         Agitation:
-        It's a sign.
+        It's a sign.<br><br>
+        Pairs: &nbsp&nbsp&nbsp&nbsp <input type="number" min= "1" max="100" id='pairs'></input><br><br>
         <button id='generate' type="button" name="button">Generate Deck</button>
+        <div id='count'></div>
       </div>
 
   <div class="  " id='game'>
 
   </div>
+  <audio id='Nice' src='./media/Nice.wav'></audio>
+  <audio id='Laff' src='./media/Laff.wav'></audio>
+  <audio id='wow' src='./media/WOW.mp3'></audio>
 </body>
 
 </html>
